# topos

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.dgov/: governor.md  project.toml
.dgov/plans/: deployed.jsonl
.dgov/plans/geo-renderer-fixes/: _compiled.toml  _root.toml
.dgov/plans/geo-renderer-fixes/tasks/: _example.toml  globe-hardening.toml  ogr2ogr-tool.toml  wire-mcp.toml
.dgov/plans/scaffold-complete/: _compiled.toml  _root.toml
.dgov/plans/scaffold-complete/tasks/: claude-md.toml  d3-references.toml  gdal-references.toml  review.toml  test-infra.toml
.sentrux/: baseline.json
plans/: scaffold-complete.toml
src/: coord.rs  crs.rs  error.rs  extent.rs  grid.rs  lib.rs  transform.rs
