[package]
name = "topos"
version = "0.1.0"
edition = "2024"
authors = ["Jake Gearon <jake@gearon.dev>"]
description = "A typed geospatial computation kernel with first-class spatial semantics"
license = "Apache-2.0"
repository = "https://github.com/jakegearon/topos"
keywords = ["geospatial", "gis", "raster", "vector", "spatial"]
categories = ["science::geo"]

[dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
